--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -3,7 +3,7 @@
 <html>
 
     <head>
-        <title>Madu's todolist</title>
+        <title>Madu's todolists</title>
         <style>
             a {
                 text-decoration: none;
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <h1>GNA Students are Super Duper Awesome</h1>
+        <h1>Madu's todo list</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
